fix overflow on small devices

--- a/style.css
+++ b/style.css
@@ -63,13 +63,13 @@ input:focus {
 
 .output {
   margin: 1rem 0;
-  padding: 0;
+  padding: 0 .5rem;
   height: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-family: Lora, serif;
-  font-size: 3.5rem;
+  font-size: 3rem;
   background: #efedff;
   color: #55433b;
 }
